add Headline component

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,2 +1,3 @@
 @import "../components/Caption/Caption.css";
 @import "../components/Footnote/Footnote.css";
+@import "../components/Headline/Headline.css";
