--- a/src/styles/atomics.css
+++ b/src/styles/atomics.css
@@ -1,4 +1,57 @@
+.Bs\(bb\) {
+    box-sizing: border-box;
+}
+
+.Bs\(bb\)--all * {
+    box-sizing: border-box;
+}
+
+.D\(b\) {
+    display: block;
+}
+
+.D\(ib\) {
+    display: inline-block;
+}
+
+.color-opacity--secondary {
+    opacity: 0.6;
+}
+
+.color-opacity--tertiary {
+    opacity: 0.3;
+}
+
 .reset-indent {
     margin: 0;
     padding: 0;
+}
+
+/* Paddings */
+.padding-yellow {
+    padding: 8px;
+}
+
+.padding-yellow--rl {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
+/* Margins */
+.margin-aqua--top {
+    margin-top: 8px;
+}
+
+.margin-aqua--bottom {
+    margin-bottom: 8px;
+}
+
+.margin-aqua--left {
+    margin-left: 8px;
+}
+
+.body {
+    font-size: var(--font-size-16);
+    font-weight: var(--font-weight-regular);
+    line-height: 20px;
 }
