--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -2,6 +2,7 @@
     /* Font */
     --font-size-12: 12px;
     --font-size-14: 14px;
+    --font-size-16: 16px;
     --font-size-30: 30px;
     --font-weight-regular: 400;
     --font-weight-medium: 500;
