--- a/src/styles/light_theme.css
+++ b/src/styles/light_theme.css
@@ -1,3 +1,4 @@
+body,
 body[scheme="client_light"],
 body[scheme="bright_light"] {
     /* Brand */
@@ -18,4 +19,11 @@ body[scheme="bright_light"] {
     --error-secondary: color(#E12F2F alpha(10%));
     --success: #3FA44B;
     --success-secondary: color(#3FA44B alpha(10%));
+
+    /* Surface */
+    --background: #F7F7F7;
+    --surface: #FFF;
+    --accent: color(black alpha(3%));
+    --blur-overlay: color(white alpha(70%));
+    --blur-overlay-fallback: #FFF;
 }
