--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -1,4 +1,34 @@
 :root {
+    /**
+     * Default
+     */
+
+    /* Brand */
+    --primary: #456BF1;
+    --secondary: color(#456BF1 alpha(10%));
+
+    /* OnSurface */
+    --os-primary: color(black alpha(90%));
+    --os-secondary: color(black alpha(60%));
+    --os-tertiary: color(black alpha(30%));
+
+    /* OnPrimary */
+    --op-primary: #FFF;
+    --op-secondary: color(white alpha(70%));
+
+     /* Helpers */
+    --error: #E12F2F;
+    --error-secondary: color(#E12F2F alpha(10%));
+    --success: #3FA44B;
+    --success-secondary: color(#3FA44B alpha(10%));
+
+    /* Surface */
+    --background: #F7F7F7;
+    --surface: #FFF;
+    --accent: color(black alpha(3%));
+    --blur-overlay: color(white alpha(70%));
+    --blur-overlay-fallback: #FFF;
+
     /* Font */
     --font-size-12: 12px;
     --font-size-14: 14px;
@@ -6,4 +36,12 @@
     --font-size-30: 30px;
     --font-weight-regular: 400;
     --font-weight-medium: 500;
+    /* ––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+
+    /**
+     * Components
+     */
+
 }
