--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,8 @@
 @import "./constants.css";
 @import "./atomics.css";
 @import "./components.css";
+
+body {
+    font-family: sans-serif;
+    color: var(--os-primary);
+}
