set control placeholder color in Field component

--- a/src/components/Field/Field.css
+++ b/src/components/Field/Field.css
@@ -45,6 +45,10 @@
     outline: none;
 }
 
+.Field__control::placeholder {
+    color: var(--field_control-placeholder);
+}
+
 .Field__aside {
     display: inline-flex;
     flex-shrink: 0;
