--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -50,6 +50,7 @@
     --field_body-primary: var(--secondary);
     --field_body-secondary: var(--accent);
     --field_body-error: var(--error-secondary);
+    --field_control-placeholder: var(--os-tertiary);
     --field_counter: var(--os-tertiary);
     --field_counter-max: var(--error);
     --field_hint-error: var(--error);
