--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,5 +1,5 @@
 @import "../components/Caption/Caption.css";
 @import "../components/Footnote/Footnote.css";
 @import "../components/Headline/Headline.css";
-/* @import "../components/Textarea/Textarea.css"; */
 @import "../components/Field//Field.css";
+@import "../components/Textarea/Textarea.css";
