--- a/src/styles/atomics.css
+++ b/src/styles/atomics.css
@@ -46,6 +46,11 @@
     padding: 16px;
 }
 
+.padding-blue--rl {
+    padding-right: 16px;
+    padding-left: 16px;
+}
+
 .padding-orange--rl {
     padding-right: 24px;
     padding-left: 24px;
@@ -66,6 +71,14 @@
 
 .margin-aqua--left {
     margin-left: 8px;
+}
+
+.margin-purple--right {
+    margin-right: 16px;
+}
+
+.margin-purple--left {
+    margin-left: 16px;
 }
 
 .body {
