--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,6 +1,7 @@
 @import "../components/Caption/Caption.css";
 @import "../components/Footnote/Footnote.css";
 @import "../components/Headline/Headline.css";
+@import "../components/Cell/Cell.css";
 @import "../components/Button/Button.css";
 @import "../components/Checkbox/Checkbox.css";
 @import "../components/Field/Field.css";
