add List component

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -5,4 +5,5 @@
 @import "../components/Button/Button.css";
 @import "../components/Checkbox/Checkbox.css";
 @import "../components/Field/Field.css";
+@import "../components/List/List.css";
 @import "../components/Textarea/Textarea.css";
